# RedNeuronalPython

./: README.md
nn/: pyproject.toml
nn/nn/: Red_Neuronal.ipynb
