[tool.poetry]
name = "nn"
version = "0.1.0"
description = ""
authors = ["nitoma <ec7anb@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
ipykernel = "^6.21.2"
pandas = "^1.5.3"
scikit-learn = "^1.2.1"
numpy = "^1.24.2"
tensorflow = "2.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
